--- a/3d-renderings-fort-lauderdale.html
+++ b/3d-renderings-fort-lauderdale.html
@@ -93,21 +93,21 @@
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale</a></h3>
+          <a href="interior-design-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Interior Design Fort Lauderdale" alt="Interior Design Fort Lauderdale" src="images/interior-design-fort-lauderdale.jpg"></a>
+          <h3><a href="interior-design-fort-lauderdale.html">Interior Design in Fort Lauderdale by Design by RB</a></h3>
           <p>A Decade of Excellence In the vibrant realm of interior design, where creativity intertwines with functionality, Fort Lauderdale stands as a beacon of innovation.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="general-contractor-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="General Contractor Fort Lauderdale" alt="General Contractor Fort Lauderdale" src="images/general-contractor-fort-lauderdale.jpg"></a>
+          <h3><a href="general-contractor-fort-lauderdale.html">Your Trusted Top General Contractor of South Florida</a></h3>
+          <p>Discover Fort Lauderdale's premier general contractor with over a decade of expertise, dedicated to exceeding expectations. Contact us today!</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="3d-renderings-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="3D Rendering Fort Lauderdale" alt="3D Rendering Fort Lauderdale" src="images/3D-renderings-fort-lauderdale.jpg"></a>
+          <h3><a href="3d-renderings-fort-lauderdale.html">Setting the Standard of 3D Renderings in Fort Lauderdale</a></h3>
+          <p>Expert in architectural visualization, specializing in 3D renderings in Fort Lauderdale. Over a decade of experience delivering exceptional results.</p>
         </div>
 
       </div>
@@ -115,21 +115,21 @@
       <div class="row">
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="architectural-firm-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Architectural Firm Fort Lauderdale" alt="Architectural Firm Fort Lauderdale" src="images/architectural-firm-fort-lauderdale.jpg"></a>
+          <h3><a href="architectural-firm-fort-lauderdale.html">Redefining Luxury Living: Architectural Firm in Fort Lauderdale</a></h3>
+          <p>In the vibrant cityscape of Fort Lauderdale, discerning homeowners and businesses seek an architectural firm that transcends conventional boundaries.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="construction-company-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Construction Company in Fort Lauderdale" alt="Construction Company in Fort Lauderdale" src="images/construction-company-fort-lauderdale.jpg"></a>
+          <h3><a href="construction-company-fort-lauderdale.html">Redefining Excellence: Construction Company in Fort Lauderdale Leading the Way</a></h3>
+          <p>Our renowned construction company stands out among the rest, offering unparalleled expertise, innovation, and dedication to client satisfaction.</p>
         </div>
 
         <div class="col-md-4 portfolio-item">
-          <a href="#project-link"><img class="img-responsive" src="http://placehold.it/700x400"></a>
-          <h3><a href="#project-link">Project Name</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+          <a href="project-management-fort-lauderdale.html"><img class="img-responsive" style="border: 1px solid #eee; padding: 5px;" img name="Project Management Fort Lauderdale" alt="Project Management Fort Lauderdale" src="images/project-management-fort-lauderdale.jpg"></a>
+          <h3><a href="project-management-fort-lauderdale.html">Mastering Excellence: Project Management in Fort Lauderdale</a></h3>
+          <p>At our esteemed firm, we pride ourselves on our mastery of project management, delivering exceptional results that exceed client expectations time and time again.</p>
         </div>
 
       </div>
