--- a/project-management-fort-lauderdale.html
+++ b/project-management-fort-lauderdale.html
@@ -30,7 +30,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://designbyrb.com">DESIGN BY RB</a>
+          <a class="navbar-brand" href="/InteriorDesign/">DESIGN BY RB</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
