--- a/project-management-fort-lauderdale.html
+++ b/project-management-fort-lauderdale.html
@@ -66,13 +66,13 @@
 
           <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" img name="Project Management in Fort Lauderdale" alt="Project Management in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/project-management-fort-lauderdale.jpg"></a></p>
           
-          <ph3>Experienced Team of Experts: Bringing Visions to Life</h3>
+          <h3>Experienced Team of Experts: Bringing Visions to Life</h3>
 
           <p>Our success is attributed to our team of seasoned professionals who excel in their respective fields. From skilled architects and engineers to talented project managers and designers, our diverse team collaborates seamlessly to bring our clients' visions to life. Through effective communication, strategic planning, and innovative solutions, we ensure that every project is executed with precision and efficiency.</p>
 
           <p>Leveraging cutting-edge virtual reality technology, our team provides clients with immersive experiences that allow them to visualize their projects with unparalleled clarity. From conceptualization to completion, our architects and engineers work hand in hand to transform ideas into reality, ensuring that every detail is meticulously crafted to perfection.</p>
 
-          <h3> igh-End Quality Materials and Innovative Designs</h3>
+          <h3>High-End Quality Materials and Innovative Designs</h3>
 
           <p>Quality is at the forefront of everything we do. We only use high-end quality materials sourced from trusted suppliers to ensure that every aspect of our projects meets the highest standards of craftsmanship and durability. Our designs are not only luxurious but also innovative, pushing the boundaries of traditional construction practices to create spaces that are as functional as they are aesthetically pleasing.</p>
 
