--- a/3d-renderings-fort-lauderdale.html
+++ b/3d-renderings-fort-lauderdale.html
@@ -8,7 +8,7 @@
 
     <title>3D RENDERINGS IN FORT LAUDERDALE | DESIGN BY RB</title>
 
-    <meta name="keywords" content="3D renderings in Fort Lauderdale, 3D renderings Fort Lauderdale, general contractor, general contractor in fort lauderdale, interior designers, construction, architects, 3D modeling, renovation, fort lauderdale"> 
+    <meta name="keywords" content="3D renderings in Fort Lauderdale, 3D renderings Fort Lauderdale, 3D renderings, fort lauderdale, interior designers, construction, architects, 3D modeling, renovation"> 
     
     <meta name="description" content="Expert in architectural visualization, specializing in 3D renderings in Fort Lauderdale. Over a decade of experience delivering exceptional results. Contact us today!">
 
@@ -57,9 +57,9 @@
 
           <p>With over a decade of experience in the industry, we have perfected the art of 3D renderings in Fort Lauderdale, earning a reputation for excellence that precedes us. Our journey began with a simple yet ambitious goal: to redefine the way clients envision their spaces. Since then, we've remained steadfast in our commitment to quality, integrity, and innovation, setting new standards of excellence in the field.</p>
 
-          <p> At the core of our success lies our exceptional team of professionals, each a master of their craft. From seasoned interior designers with an eye for detail to skilled architects with a flair for creativity, our diverse team collaborates seamlessly to bring our clients' visions to life. With a wealth of experience and a passion for excellence, they work tirelessly to ensure that every project is a true reflection of our clients' unique style and personality.</p>
+          <p> At the core of our success lies our exceptional team of professionals, each a master of their craft. From seasoned <a href="interior-design-fort-lauderdale.html">interior designers</a> with an eye for detail to skilled architects with a flair for creativity, our diverse team collaborates seamlessly to bring our clients' visions to life. With a wealth of experience and a passion for excellence, they work tirelessly to ensure that every project is a true reflection of our clients' unique style and personality.</p>
              
-          <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" img name="3D Renderings in Fort Lauderdale" alt="3D Renderings in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/3D-renderings-fort-lauderdale.jpg"></a></p>
+          <p><a href="images/3D-renderings-fort-lauderdale.jpg"><img class="img-responsive" img name="3D Renderings in Fort Lauderdale" alt="3D Renderings in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/3D-renderings-fort-lauderdale.jpg"></a></p>
 
           <p>Technology is the cornerstone of our approach to architectural visualization. Leveraging the latest advancements in software and digital tools, we empower our clients to visualize and customize every aspect of their project with ease. From photorealistic <u>3D renderings in Fort Lauderdale</u> to immersive virtual reality experiences, we provide our clients with the tools they need to make informed decisions and bring their vision to life with unparalleled clarity and precision.</p>
 
