--- a/architectural-firm-fort-lauderdale.html
+++ b/architectural-firm-fort-lauderdale.html
@@ -8,7 +8,7 @@
 
     <title>Architectural Firm in Fort Lauderdale Setting New Standards | DESIGN BY RB</title>
 
-    <meta name="keywords" content="3D renderings in Fort Lauderdale, 3D renderings Fort Lauderdale, general contractor, general contractor in fort lauderdale, interior designers, construction, architects, 3D modeling, renovation, fort lauderdale"> 
+    <meta name="keywords" content="Architectural Firm in Fort Lauderdale, Architectural Firm Fort Lauderdale, Architectural Firm, interior designers, construction, architects, 3D modeling, renovation, fort lauderdale"> 
     
     <meta name="description" content="Expert in architectural visualization, specializing in 3D renderings in Fort Lauderdale. Over a decade of experience delivering exceptional results. Contact us today!">
 
@@ -60,11 +60,11 @@
 
           <p>Since our inception, we have been committed to exceeding the expectations of our clients at every turn. With more than ten years in business, we have cultivated a legacy of exceptional design, meticulous attention to detail, and unwavering dedication to client satisfaction. Our track record speaks for itself, with countless successful projects and satisfied clients to our name.</p>
 
-          <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" img name="Architectural Firm in Fort Lauderdale" alt="Architectural Firm in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/architectural-firm-fort-lauderdale.jpg"></a></p>
+          <p><a href="images/architectural-firm-fort-lauderdale.jpg"><img class="img-responsive" img name="Architectural Firm in Fort Lauderdale" alt="Architectural Firm in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/architectural-firm-fort-lauderdale.jpg"></a></p>
 
           <h2>Unrivaled Expertise: Our Multidisciplinary Team</h2>
 
-          <p>At the heart of our success lies our exceptional team of professionals, each a master of their craft. From visionary architects and interior designers to skilled engineers and project managers, our diverse team collaborates seamlessly to bring our clients' visions to life. With a wealth of experience and a passion for excellence, they work tirelessly to ensure that every project exceeds expectations.</p>
+          <p>At the heart of our success lies our exceptional team of professionals, each a master of their craft. From visionary architects and <a href="interior-design-fort-lauderdale.html">interior designers</a> to skilled engineers and project managers, our diverse team collaborates seamlessly to bring our clients' visions to life. With a wealth of experience and a passion for excellence, they work tirelessly to ensure that every project exceeds expectations.</p>
 
          <p>We are harnessing innovation with cutting-edge virtual reality technology. In an era of rapid technological advancement, we stay at the forefront of innovation by leveraging cutting-edge virtual reality technology. Through immersive 3D renderings and virtual walkthroughs, we provide our clients with a true-to-life preview of their future space, empowering them to make informed decisions and visualize the end result with unparalleled clarity.</p>
 
