--- a/construction-company-fort-lauderdale.html
+++ b/construction-company-fort-lauderdale.html
@@ -8,7 +8,7 @@
 
     <title>CONSTRUCTION COMPANY IN FORT LAUDERDALE | DESIGN BY RB</title>
 
-    <meta name="keywords" content="construction company, construction company in fort lauderdale, fort lauderdale, interior designers, architects, engineers, project managers, 3D renderings, virtual walkthroughs, permits, inspections"> 
+    <meta name="keywords" content="construction company, construction company in fort lauderdale, construction company fort lauderdale, fort lauderdale, interior designers, architects, engineers, project managers, 3D renderings, virtual walkthroughs, permits, inspections"> 
     
     <meta name="description" content="Our renowned construction company stands out among the rest, offering unparalleled expertise, innovation, and dedication to client satisfaction.">
 
@@ -60,11 +60,11 @@
 
           <h3>Unrivaled Expertise: Our Multidisciplinary Team</h3>
 
-          <p>Central to our success is our exceptional team of professionals, comprising talented interior designers, architects, engineers, and project managers. With a diverse range of skills and expertise, our team collaborates seamlessly to bring our clients' visions to life. From conceptualization and design to execution and completion, we leverage our collective knowledge and experience to deliver exceptional results that exceed expectations.</p>
+          <p>Central to our success is our exceptional team of professionals, comprising talented <a href="interior-design-fort-lauderdale.html">interior designers</a>, architects, engineers, and project managers. With a diverse range of skills and expertise, our team collaborates seamlessly to bring our clients' visions to life. From conceptualization and design to execution and completion, we leverage our collective knowledge and experience to deliver exceptional results that exceed expectations.</p>
 
           <p>With a relentless commitment to innovation, we embrace cutting-edge virtual reality technology to enhance the design and visualization process. Through immersive 3D renderings and virtual walkthroughs, we provide our clients with a true-to-life preview of their future space, allowing them to make informed decisions and visualize the end result with unparalleled clarity.</p>
 
-          <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" img name="Construction Company in Fort Lauderdale" alt="Construction Company in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/construction-company-fort-lauderdale.jpg"></a></p>
+          <p><a href="images/construction-company-fort-lauderdale.jpg"><img class="img-responsive" img name="Construction Company in Fort Lauderdale" alt="Construction Company in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/construction-company-fort-lauderdale.jpg"></a></p>
 
           <h3>Luxury Redefined: High-Quality Materials and Exquisite Design</h3>
 
