--- a/project-management-fort-lauderdale.html
+++ b/project-management-fort-lauderdale.html
@@ -8,7 +8,7 @@
 
     <title>PROJECT MANAGEMENT IN FORT LAUDERDALE | DESIGN BY RB</title>
 
-    <meta name="keywords" content="construction company, construction company in fort lauderdale, fort lauderdale, interior designers, architects, engineers, project managers, 3D renderings, virtual walkthroughs, permits, inspections"> 
+    <meta name="keywords" content="construction company, construction company in fort lauderdale, construction company, fort lauderdale, interior designers, architects, engineers, project managers, 3D renderings, virtual walkthroughs, permits, inspections"> 
     
     <meta name="description" content="At our esteemed firm, we pride ourselves on our mastery of project management, delivering exceptional results that exceed client expectations time and time again.">
 
@@ -64,7 +64,7 @@
 
           <p>When it comes to project management, our firm stands in the top 1% of the best contractors in South Florida, according to BuildZoom. This prestigious recognition is a testament to our commitment to excellence and our ability to consistently deliver exceptional results. Additionally, our A+ BBB Better Business Bureau ranking further solidifies our reputation as a trusted and reliable partner in construction and development.</p>
 
-          <p><a href="images/interior-design-fort-lauderdale.jpg"><img class="img-responsive" img name="Project Management in Fort Lauderdale" alt="Project Management in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/project-management-fort-lauderdale.jpg"></a></p>
+          <p><a href="images/project-management-fort-lauderdale.jpg"><img class="img-responsive" img name="Project Management in Fort Lauderdale" alt="Project Management in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/project-management-fort-lauderdale.jpg"></a></p>
           
           <h3>Experienced Team of Experts: Bringing Visions to Life</h3>
 
