--- a/architectural-firm-fort-lauderdale.html
+++ b/architectural-firm-fort-lauderdale.html
@@ -64,9 +64,9 @@
 
           <h2>Unrivaled Expertise: Our Multidisciplinary Team</h2>
 
-          <p>At the heart of our success lies our exceptional team of professionals, each a master of their craft. From visionary architects and <a href="interior-design-fort-lauderdale.html">interior designers</a> to skilled engineers and project managers, our diverse team collaborates seamlessly to bring our clients' visions to life. With a wealth of experience and a passion for excellence, they work tirelessly to ensure that every project exceeds expectations.</p>
+          <p>At the heart of our success lies our exceptional team of professionals, each a master of their craft. From visionary architects and <a href="interior-design-fort-lauderdale.html">interior designers</a> to skilled <a href="general-contractor-fort-lauderdale.html">engineers</a> and <a href="project-management-fort-lauderdale.html">project managers</a>, our diverse team collaborates seamlessly to bring our clients' visions to life. With a wealth of experience and a passion for excellence, they work tirelessly to ensure that every project exceeds expectations.</p>
 
-         <p>We are harnessing innovation with cutting-edge virtual reality technology. In an era of rapid technological advancement, we stay at the forefront of innovation by leveraging cutting-edge virtual reality technology. Through immersive 3D renderings and virtual walkthroughs, we provide our clients with a true-to-life preview of their future space, empowering them to make informed decisions and visualize the end result with unparalleled clarity.</p>
+         <p>We are harnessing innovation with cutting-edge virtual reality technology. In an era of rapid technological advancement, we stay at the forefront of innovation by leveraging cutting-edge virtual reality technology. Through immersive <a href="3d-renderings-fort-lauderdale.html">3D renderings</a> and virtual walkthroughs, we provide our clients with a true-to-life preview of their future space, empowering them to make informed decisions and visualize the end result with unparalleled clarity.</p>
 
          <p>Quality is the cornerstone of our philosophy. We source only the finest materials from trusted suppliers around the globe, ensuring that every element of our designs meets the highest standards of craftsmanship and durability. From exquisite finishes to bespoke furnishings, our designs exude luxury and sophistication, elevating the ordinary to the extraordinary.</p>
 
@@ -76,7 +76,7 @@
 
          <p>At our architectural firm in Fort Lauderdale, client satisfaction isn't just a goal—it's our guiding principle. With a 100% satisfaction guarantee and over 200 glowing 5-star reviews on Google, we've earned the trust and admiration of our clients. Each testimonial is a testament to our unwavering commitment to excellence and our dedication to exceeding expectations.</p>
 
-         <p>In conclusion, when it comes to choosing an architectural firm in Fort Lauderdale, settle for nothing less than the best. With over a decade of proven expertise, a passion for innovation, and a commitment to excellence, we are your trusted partner in bringing your architectural dreams to life. Contact us today and let's embark on a journey of extraordinary design and construction experiences together.</p>
+         <p>In conclusion, when it comes to choosing an architectural firm in Fort Lauderdale, settle for nothing less than the best. With over a decade of proven expertise, a passion for innovation, and a commitment to excellence, we are your trusted partner in bringing your architectural dreams to life. Contact us today and let's embark on a journey of extraordinary design and <a href="construction-company-fort-lauderdale.html">construction</a> experiences together.</p>
 
          <br>
           
