--- a/project-management-fort-lauderdale.html
+++ b/project-management-fort-lauderdale.html
@@ -8,7 +8,7 @@
 
     <title>PROJECT MANAGEMENT IN FORT LAUDERDALE | DESIGN BY RB</title>
 
-    <meta name="keywords" content="construction company, construction company in fort lauderdale, construction company, fort lauderdale, interior designers, architects, engineers, project managers, 3D renderings, virtual walkthroughs, permits, inspections"> 
+    <meta name="keywords" content="project management, project management in fort lauderdale, project management fort lauderdale, fort lauderdale,"> 
     
     <meta name="description" content="At our esteemed firm, we pride ourselves on our mastery of project management, delivering exceptional results that exceed client expectations time and time again.">
 
@@ -62,7 +62,7 @@
 
           <p>With over a decade of experience in the industry, our firm has established itself as a leader in project management in Fort Lauderdale. Through our years of service, we have honed our expertise, refined our processes, and cultivated a reputation for excellence that precedes us. Our track record of successful projects and satisfied clients speaks volumes about our dedication to quality and professionalism.</p>
 
-          <p>When it comes to project management, our firm stands in the top 1% of the best contractors in South Florida, according to BuildZoom. This prestigious recognition is a testament to our commitment to excellence and our ability to consistently deliver exceptional results. Additionally, our A+ BBB Better Business Bureau ranking further solidifies our reputation as a trusted and reliable partner in construction and development.</p>
+          <p>When it comes to project management, our firm stands in the top 1% of the best contractors in South Florida, according to BuildZoom. This prestigious recognition is a testament to our commitment to excellence and our ability to consistently deliver exceptional results. Additionally, our A+ BBB Better Business Bureau ranking further solidifies our reputation as a trusted and reliable partner in <a href="general-contractor-fort-lauderdale.html">construction and development.</a></p>
 
           <p><a href="images/project-management-fort-lauderdale.jpg"><img class="img-responsive" img name="Project Management in Fort Lauderdale" alt="Project Management in Fort Lauderdale" style="border: 1px solid #eee; padding: 5px;" width=100% src="images/project-management-fort-lauderdale.jpg"></a></p>
           
@@ -70,7 +70,7 @@
 
           <p>Our success is attributed to our team of seasoned professionals who excel in their respective fields. From skilled architects and engineers to talented project managers and designers, our diverse team collaborates seamlessly to bring our clients' visions to life. Through effective communication, strategic planning, and innovative solutions, we ensure that every project is executed with precision and efficiency.</p>
 
-          <p>Leveraging cutting-edge virtual reality technology, our team provides clients with immersive experiences that allow them to visualize their projects with unparalleled clarity. From conceptualization to completion, our architects and engineers work hand in hand to transform ideas into reality, ensuring that every detail is meticulously crafted to perfection.</p>
+          <p>Leveraging cutting-edge virtual reality technology, our team provides clients with immersive experiences that allow them to visualize their projects with unparalleled clarity. From conceptualization to completion, our <a href="architectural-firm-fort-lauderdale.html">architects</a> and <a href="general-contractor-fort-lauderdale.html">engineers</a> work hand in hand to transform ideas into reality, ensuring that every detail is meticulously crafted to perfection.</p>
 
           <h3>High-End Quality Materials and Innovative Designs</h3>
 
